--- a/apps/mobile/jest.config.json
+++ b/apps/mobile/jest.config.json
@@ -1,24 +1,16 @@
 {
   "preset": "react-native",
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
-  "transform": {
-    "^.+\\.(js|jsx|ts|tsx)$": [
-      "babel-jest",
-      {
-        "presets": ["@react-native/babel-preset"]
-      }
-    ]
-  },
   "testMatch": [
     "**/__tests__/**/*.(ts|tsx|js)",
     "**/*.(test|spec).(ts|tsx|js)"
   ],
   "collectCoverageFrom": ["src/**/*.{ts,tsx}", "!src/**/*.d.ts"],
   "setupFilesAfterEnv": ["<rootDir>/jest-setup.ts"],
-  "moduleNameMapping": {
+  "moduleNameMapper": {
     "^@mimic/(.*)$": "<rootDir>/../../packages/$1/src"
   },
   "transformIgnorePatterns": [
-    "node_modules/(?!(react-native|@react-native|react-native-.*|@mimic)/)"
+    "node_modules/(?!(react-native|@react-native|react-native-.*|@mimic|@react-native-async-storage)/)"
   ]
 }
