--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,29 +14,32 @@
   "dependencies": {
     "@mimic/design-tokens": "workspace:*",
     "@mimic/shared-utils": "workspace:*",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "@react-native-async-storage/async-storage": "^2.1.0"
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "react": "19.1.0",
+    "react-native": "0.80.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.76.5",
-    "@react-native/eslint-config": "0.76.5",
-    "@react-native/metro-config": "0.76.5",
-    "@react-native/typescript-config": "0.76.5",
-    "@testing-library/react-native": "^12.4.2",
-    "@testing-library/jest-native": "^5.4.3",
-    "@types/jest": "^29.5.8",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "@babel/core": "^7.27.7",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/runtime": "^7.27.6",
+    "@eslint/js": "^9.30.0",
+    "@react-native/babel-preset": "0.80.0",
+    "@react-native/eslint-config": "0.80.0",
+    "@react-native/metro-config": "0.80.0",
+    "@react-native/typescript-config": "0.80.0",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.1.8",
+    "@types/react-test-renderer": "^19.1.0",
+    "babel-jest": "^30.0.2",
+    "eslint": "^9.30.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-native": "^5.0.0",
+    "jest": "^30.0.3",
+    "prettier": "^3.6.2",
+    "react-test-renderer": "19.1.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.0"
   },
   "engines": {
     "node": ">=20"
