--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,16 +31,16 @@
     "@builder.io/qwik-city": "^1.14.1",
     "@eslint/js": "latest",
     "@mimic/design-tokens": "workspace:*",
-    "@types/node": "20.14.11",
-    "eslint": "9.25.1",
+    "@types/node": "24.0.7",
+    "eslint": "9.30.0",
     "eslint-plugin-qwik": "^1.14.1",
-    "globals": "16.0.0",
-    "prettier": "3.3.3",
-    "typescript": "5.4.5",
-    "typescript-eslint": "8.26.1",
-    "undici": "*",
-    "vite": "5.3.5",
-    "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "^3.0.0"
+    "globals": "16.2.0",
+    "prettier": "3.6.2",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.35.0",
+    "undici": "^7.11.0",
+    "vite": "^7.0.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "wrangler": "^4.22.0"
   }
 }
