--- a/package.json
+++ b/package.json
@@ -157,7 +157,15 @@
       "react": "19.1.0",
       "react-dom": "19.1.0",
       "esbuild@<=0.24.2": ">=0.25.5",
-      "koa@<2.16.1": ">=3.0.0"
+      "koa@<2.16.1": ">=3.0.0",
+      "vite@>=5.3.0 <5.3.6": ">=5.3.6",
+      "vite@>=5.3.0 <=5.3.5": ">=5.3.6",
+      "vite@>=5.0.0 <=5.4.11": ">=5.4.12",
+      "vite@>=5.0.0 <5.4.15": ">=5.4.15",
+      "vite@>=5.0.0 <5.4.16": ">=5.4.16",
+      "vite@>=5.0.0 <5.4.18": ">=5.4.18",
+      "vite@>=5.0.0 <=5.4.18": ">=5.4.19",
+      "vite@>=5.0.0 <5.4.17": ">=5.4.17"
     },
     "onlyBuiltDependencies": [
       "@bundled-es-modules/glob",
