--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "tokens:check-drift": "echo '🔍 Checking for token drift...' && echo 'Drift check placeholder - would compare with Penpot'",
     "tokens:diff": "echo '📊 Token diff placeholder - would show changes between versions'",
     "tokens:monitor": "echo '👀 Token monitoring placeholder - would start continuous monitoring'",
-    "penpot-export": "cd tools/penpot-export && ./export-tokens.sh",
+    "tokens:cli:help": "echo '📋 Install mimic-token-cli globally: npm install -g mimic-token-cli'",
+    "tokens:cli:status": "echo '📋 Use: mimic-tokens status (install globally: npm install -g mimic-token-cli)'",
     "validate:token-contract": "pnpm tokens:validate",
     "validate:penpot-export": "node -e \"console.log('🔍 Validating Penpot export...'); if (!require('fs').existsSync('tokens.json')) { console.log('❌ tokens.json not found'); process.exit(1); } console.log('✅ Penpot export validated');\"",
     "dev:full-stack": "concurrently 'nx run design-tokens:watch' 'nx run design-system:storybook'",
@@ -89,11 +90,11 @@
     "analyze": "pnpm build && pnpm workspace:info"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.0.6",
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@commitlint/config-nx-scopes": "^19.8.1",
-    "@eslint/js": "^9.30.0",
+    "@biomejs/biome": "2.0.6",
+    "@commitlint/cli": "19.8.1",
+    "@commitlint/config-conventional": "19.8.1",
+    "@commitlint/config-nx-scopes": "19.8.1",
+    "@eslint/js": "9.30.0",
     "@nx/eslint": "21.2.1",
     "@nx/eslint-plugin": "21.2.1",
     "@nx/jest": "21.2.1",
@@ -104,30 +105,30 @@
     "@nx/storybook": "21.2.1",
     "@nx/vite": "21.2.1",
     "@nx/workspace": "21.2.1",
-    "@types/node": "^24.0.7",
-    "@typescript-eslint/eslint-plugin": "^8.35.0",
-    "@typescript-eslint/parser": "^8.35.0",
-    "dprint": "^0.50.0",
-    "eslint": "^9.30.0",
+    "@types/node": "24.0.8",
+    "@typescript-eslint/eslint-plugin": "8.35.1",
+    "@typescript-eslint/parser": "8.35.1",
+    "dprint": "0.50.1",
+    "eslint": "9.30.0",
     "eslint-config-prettier": "10.1.5",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "glob": "^11.0.3",
-    "husky": "^9.1.7",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "glob": "11.0.3",
+    "husky": "9.1.7",
     "jiti": "2.4.2",
-    "jsdom": "^26.1.0",
-    "lint-staged": "^16.1.2",
-    "markdownlint-cli2": "^0.18.1",
+    "jsdom": "26.1.0",
+    "lint-staged": "16.1.2",
+    "markdownlint-cli2": "0.18.1",
     "nx": "21.2.1",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "stylelint": "^16.21.0",
-    "stylelint-config-standard": "^38.0.0",
-    "stylelint-config-tailwindcss": "^1.0.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.0",
-    "vitest": "^3.2.4"
+    "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "0.6.13",
+    "stylelint": "16.21.0",
+    "stylelint-config-standard": "38.0.0",
+    "stylelint-config-tailwindcss": "1.0.0",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.35.1",
+    "vitest": "3.2.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json}": [
@@ -179,8 +180,8 @@
     ]
   },
   "dependencies": {
-    "@vanilla-extract/css": "^1.17.4",
-    "@vanilla-extract/vite-plugin": "^5.1.0",
+    "@vanilla-extract/css": "1.17.4",
+    "@vanilla-extract/vite-plugin": "5.1.0",
     "storybook": "9.0.14"
   }
 }
