--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "apps/*",
     "tools/*"
   ],
-  "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184",
+  "packageManager": "pnpm@10.17.0+sha512.fce8a3dd29a4ed2ec566fb53efbb04d8c44a0f05bc6f24a73046910fb9c3ce7afa35a0980500668fa3573345bd644644fa98338fa168235c80f4aa17aa17fbef",
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=9.0.0"
+    "node": ">=22.19.0",
+    "pnpm": ">=10.17.0"
   },
   "scripts": {
     "build": "nx run-many -t build && pnpm run postbuild:clean",
@@ -65,13 +65,13 @@
     "tokens:sync-all": "nx run design-tokens:tokens:sync && nx run-many -t build --skip-nx-cache",
     "tokens:watch": "nx run design-tokens:watch",
     "tokens:validate": "node -e \"const { runTokenContractValidation } = require('./packages/shared-utils/dist/token-contract-validation.js'); runTokenContractValidation();\"",
-    "tokens:check-drift": "echo '🔍 Checking for token drift...' && echo 'Drift check placeholder - would compare with Penpot'",
-    "tokens:diff": "echo '📊 Token diff placeholder - would show changes between versions'",
-    "tokens:monitor": "echo '👀 Token monitoring placeholder - would start continuous monitoring'",
-    "tokens:cli:help": "echo '📋 Install mimic-token-cli globally: npm install -g mimic-token-cli'",
-    "tokens:cli:status": "echo '📋 Use: mimic-tokens status (install globally: npm install -g mimic-token-cli)'",
+    "tokens:check-drift": "echo '\ud83d\udd0d Checking for token drift...' && echo 'Drift check placeholder - would compare with Penpot'",
+    "tokens:diff": "echo '\ud83d\udcca Token diff placeholder - would show changes between versions'",
+    "tokens:monitor": "echo '\ud83d\udc40 Token monitoring placeholder - would start continuous monitoring'",
+    "tokens:cli:help": "echo '\ud83d\udccb Install mimic-token-cli globally: npm install -g mimic-token-cli'",
+    "tokens:cli:status": "echo '\ud83d\udccb Use: mimic-tokens status (install globally: npm install -g mimic-token-cli)'",
     "validate:token-contract": "pnpm tokens:validate",
-    "validate:penpot-export": "node -e \"console.log('🔍 Validating Penpot export...'); if (!require('fs').existsSync('tokens.json')) { console.log('❌ tokens.json not found'); process.exit(1); } console.log('✅ Penpot export validated');\"",
+    "validate:penpot-export": "node -e \"console.log('\ud83d\udd0d Validating Penpot export...'); if (!require('fs').existsSync('tokens.json')) { console.log('\u274c tokens.json not found'); process.exit(1); } console.log('\u2705 Penpot export validated');\"",
     "dev:full-stack": "concurrently 'nx run design-tokens:watch' 'nx run design-system:storybook'",
     "prepare": "husky",
     "graph": "nx graph",
@@ -87,47 +87,50 @@
     "setup:dx": "./scripts/setup-dx.sh",
     "setup:complete": "pnpm install && pnpm clean:apple && pnpm build",
     "workspace:info": "nx report && nx graph --file=tmp/workspace-graph.json",
-    "analyze": "pnpm build && pnpm workspace:info"
+    "analyze": "pnpm build && pnpm workspace:info",
+    "upgrade:plan": "nx migrate latest",
+    "upgrade:latest": "pnpm up --latest --recursive --workspace-root",
+    "upgrade:verify": "pnpm install && pnpm nx run-many -t build,test,lint"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.0.6",
+    "@biomejs/biome": "2.2.4",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@commitlint/config-nx-scopes": "19.8.1",
-    "@eslint/js": "9.30.0",
-    "@nx/eslint": "21.2.1",
-    "@nx/eslint-plugin": "21.2.1",
-    "@nx/jest": "21.2.1",
-    "@nx/js": "21.2.1",
-    "@nx/node": "21.2.1",
-    "@nx/plugin": "21.2.1",
-    "@nx/react": "21.2.1",
-    "@nx/storybook": "21.2.1",
-    "@nx/vite": "21.2.1",
-    "@nx/workspace": "21.2.1",
-    "@types/node": "24.0.8",
-    "@typescript-eslint/eslint-plugin": "8.35.1",
-    "@typescript-eslint/parser": "8.35.1",
-    "dprint": "0.50.1",
-    "eslint": "9.30.0",
+    "@eslint/js": "9.36.0",
+    "@nx/eslint": "21.5.3",
+    "@nx/eslint-plugin": "21.5.3",
+    "@nx/jest": "21.5.3",
+    "@nx/js": "21.5.3",
+    "@nx/node": "21.5.3",
+    "@nx/plugin": "21.5.3",
+    "@nx/react": "21.5.3",
+    "@nx/storybook": "21.5.3",
+    "@nx/vite": "21.5.3",
+    "@nx/workspace": "21.5.3",
+    "@types/node": "24.5.2",
+    "@typescript-eslint/eslint-plugin": "8.44.0",
+    "@typescript-eslint/parser": "8.44.0",
+    "dprint": "0.50.2",
+    "eslint": "9.36.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "glob": "11.0.3",
     "husky": "9.1.7",
-    "jiti": "2.4.2",
-    "jsdom": "26.1.0",
-    "lint-staged": "16.1.2",
+    "jiti": "2.5.1",
+    "jsdom": "27.0.0",
+    "lint-staged": "16.1.6",
     "markdownlint-cli2": "0.18.1",
-    "nx": "21.2.1",
+    "nx": "21.5.3",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.13",
-    "stylelint": "16.21.0",
-    "stylelint-config-standard": "38.0.0",
+    "stylelint": "16.24.0",
+    "stylelint-config-standard": "39.0.0",
     "stylelint-config-tailwindcss": "1.0.0",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.35.1",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.44.0",
     "vitest": "3.2.4"
   },
   "lint-staged": {
@@ -155,18 +158,10 @@
   },
   "pnpm": {
     "overrides": {
-      "react": "19.1.0",
-      "react-dom": "19.1.0",
+      "react": "19.1.1",
+      "react-dom": "19.1.1",
       "esbuild@<=0.24.2": ">=0.25.5",
-      "koa@<2.16.1": ">=3.0.0",
-      "vite@>=5.3.0 <5.3.6": ">=5.3.6",
-      "vite@>=5.3.0 <=5.3.5": ">=5.3.6",
-      "vite@>=5.0.0 <=5.4.11": ">=5.4.12",
-      "vite@>=5.0.0 <5.4.15": ">=5.4.15",
-      "vite@>=5.0.0 <5.4.16": ">=5.4.16",
-      "vite@>=5.0.0 <5.4.18": ">=5.4.18",
-      "vite@>=5.0.0 <=5.4.18": ">=5.4.19",
-      "vite@>=5.0.0 <5.4.17": ">=5.4.17"
+      "koa@<2.16.1": ">=3.0.0"
     },
     "onlyBuiltDependencies": [
       "@bundled-es-modules/glob",
@@ -181,7 +176,7 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "1.17.4",
-    "@vanilla-extract/vite-plugin": "5.1.0",
-    "storybook": "9.0.14"
+    "@vanilla-extract/vite-plugin": "5.1.1",
+    "storybook": "9.1.7"
   }
 }
