--- a/apps/mobile/project.json
+++ b/apps/mobile/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/mobile/src",
+  "tags": ["scope:mobile", "type:app"],
   "targets": {
     "start": {
       "executor": "@nx/react-native:start",
@@ -80,6 +81,5 @@
         "lintFilePatterns": ["apps/mobile/**/*.{ts,tsx,js,jsx}"]
       }
     }
-  },
-  "tags": ["scope:mobile", "type:app"]
+  }
 }
