--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,7 +2,7 @@
   "name": "my-qwik-empty-starter",
   "description": "Blank project with routing included",
   "engines": {
-    "node": "^18.17.0 || ^20.3.0 || >=21.0.0"
+    "node": ">=22.0.0"
   },
   "engines-annotation": "Mostly required by sharp which needs a Node-API v9 compatible runtime",
   "private": true,
@@ -27,20 +27,20 @@
     "clean:apple": "node ../../tools/apple-cleaner.js ."
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.14.1",
-    "@builder.io/qwik-city": "^1.14.1",
-    "@eslint/js": "latest",
+    "@builder.io/qwik": "^1.16.0",
+    "@builder.io/qwik-city": "^1.16.0",
+    "@eslint/js": "^9.36.0",
     "@mimic/design-tokens": "workspace:*",
-    "@types/node": "24.0.7",
-    "eslint": "9.30.0",
-    "eslint-plugin-qwik": "^1.14.1",
+    "@types/node": "24.5.2",
+    "eslint": "9.36.0",
+    "eslint-plugin-qwik": "^1.16.0",
     "globals": "16.2.0",
     "prettier": "3.6.2",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.35.0",
-    "undici": "^7.11.0",
-    "vite": "^7.0.0",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.44.0",
+    "undici": "^7.16.0",
+    "vite": "^7.1.6",
     "vite-tsconfig-paths": "^5.1.4",
-    "wrangler": "^4.22.0"
+    "wrangler": "^4.38.0"
   }
 }
