--- a/infra/containers/devcontainer/docker-compose.yml
+++ b/infra/containers/devcontainer/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.8'
 services:
   workspace:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ../../..
+      dockerfile: infra/containers/devcontainer/Dockerfile
     volumes:
-      - ..:/workspace:cached
+      - ../../..:/workspace:cached
       - node_modules:/workspace/node_modules
       - pnpm_store:/workspace/.pnpm-store
     command: sleep infinity
@@ -43,7 +43,7 @@ services:
       - mimic-dev
 
   penpot-backend:
-    image: penpotapp/backend:2.7.2
+    image: penpotapp/backend:2.8.1
     restart: always
     volumes:
       - penpot_assets:/opt/data/assets
@@ -74,7 +74,7 @@ services:
       - mimic-dev
 
   penpot-frontend:
-    image: penpotapp/frontend:2.7.2
+    image: penpotapp/frontend:2.8.1
     restart: always
     ports:
       - 9001:80
@@ -100,11 +100,11 @@ services:
 
   # Penpot token export automation
   penpot-export:
-    image: ghcr.io/penpot/penpot-export:latest
+    image: ghcr.io/penpot/penpot-export:2.8.1
     container_name: mimic-penpot-export
     volumes:
-      - ../packages/design-tokens/tokens:/out
-      - ../tools/penpot-export:/workspace
+      - ../../../packages/design-tokens/tokens:/out
+      - ../../../tools/penpot-export:/workspace
     working_dir: /workspace
     environment:
       # Set these in your .env file or GitHub Secrets for CI
