feat: add comprehensive project documentation and repo structure
- Add detailed repository structure documentation (REPO_STRUCTURE.md)
- Create implementation plan 2.0 with sprint breakdown
- Add new apps: docs, examples, workflows
- Add new packages: platform-bridges, token-orchestrator, tokens-core, tokens-outputs, ui-adapters, ui-kernel
- Add toolchains and penpot-export tools
- Update configuration files for enhanced project structure
- Improve documentation across all modules with better formatting and clarity

--- a/nx.json
+++ b/nx.json
@@ -59,6 +59,10 @@
     "lint": {
       "cache": true
     },
+    "lint:base": {
+      "cache": true,
+      "inputs": ["default", "{workspaceRoot}/biome.json"]
+    },
     "format": {
       "cache": true,
       "inputs": ["default", "{workspaceRoot}/biome.json"]
