--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "test": "nx run-many -t test",
     "test:affected": "nx affected -t test",
     "lint:packages": "nx run-many -t lint -p design-tokens,design-system,shared-utils",
-    "lint:workspace": "nx run workspace-format:lint",
+    "lint:base": "nx run workspace-format:lint:base",
+    "lint:typed": "nx run workspace-format:lint",
+    "lint:workspace": "pnpm run lint:base && pnpm run lint:typed",
     "lint:affected": "nx affected -t lint",
     "lint:css": "stylelint 'packages/**/*.{css,scss,sass}' --fix",
     "lint:md": "markdownlint-cli2 --config config.markdownlint-cli2.jsonc --fix '**/*.md'",
@@ -49,12 +51,8 @@
     "precommit:clean": "npm run clean:ds-store",
     "autofix": "./scripts/autofix.sh",
     "autofix:safe": "./scripts/autofix.sh",
-    "format": "trunk fmt",
-    "format:check": "trunk fmt --no-fix --print-failures",
-    "format:biome": "biome format --write .",
-    "format:biome:check": "biome check --formatter-enabled=true .",
-    "format:dprint": "dprint fmt",
-    "format:dprint:check": "dprint check",
+    "format": "nx run workspace-format:format",
+    "format:check": "nx run workspace-format:format --configuration=check",
     "typecheck": "nx run-many -t typecheck",
     "visual-test": "nx run-many -t visual-test",
     "storybook": "nx run design-system:storybook",
