--- a/package.json
+++ b/package.json
@@ -40,15 +40,17 @@
     "dev": "nx run-many -t serve --parallel=10",
     "clean": "nx reset && rm -rf node_modules && pnpm install",
     "clean:apple": "node tools/apple-cleaner.js",
+    "clean:apple:staged": "node tools/apple-cleaner.js --mode=staged",
+    "check:apple": "node tools/apple-cleaner.js --mode=check",
     "clean:ds-store": "find . -name '.DS_Store' -type f -delete && find . -name '._*' -type f -delete",
     "clean:xcode": "find . -name '*.xcuserdata*' -type d -exec rm -rf {} + 2>/dev/null || true; find . -name 'xcuserdata' -type d -exec rm -rf {} + 2>/dev/null || true; find . -name '*.xcworkspace/xcuserdata' -type d -exec rm -rf {} + 2>/dev/null || true",
     "clean:apple-logs": "find . -name '*.crash' -type f -delete 2>/dev/null || true; find . -name '*.crashlog' -type f -delete 2>/dev/null || true; find . -name '*.diag' -type f -delete 2>/dev/null || true",
     "clean:spotlight": "find . -name '.Spotlight-V100' -type d -exec rm -rf {} + 2>/dev/null || true; find . -name '.fseventsd' -type d -exec rm -rf {} + 2>/dev/null || true",
     "clean:temp": "find . -name '*.tmp' -type f -delete 2>/dev/null || true; find . -name 'Thumbs.db' -type f -delete 2>/dev/null || true; find . -name '~*' -type f -delete 2>/dev/null || true",
-    "clean:all": "npm run clean:apple && npm run clean:temp && npm run clean",
+    "clean:all": "pnpm run clean:apple && pnpm run clean:temp && pnpm run clean",
     "clean:workspace": "nx run-many -t clean",
     "clean:apple:workspace": "nx run-many -t clean:apple",
-    "precommit:clean": "npm run clean:ds-store",
+    "precommit:clean": "pnpm run clean:apple:staged",
     "autofix": "./scripts/autofix.sh",
     "autofix:safe": "./scripts/autofix.sh",
     "format": "nx run workspace-format:format",
