--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,16 +18,10 @@ jobs:
           fetch-depth: 0
 
       - name: Cleanup Apple metadata (pre-install)
-        run: node tools/apple-cleaner.js .
+        run: node tools/apple-cleaner.js --mode=full
 
       - name: Fail if Apple metadata files are tracked
-        run: |
-          echo "🔍 Checking for tracked Apple metadata files (.DS_Store, ._* )"
-          if git ls-files -z | tr '\0' '\n' | grep -E '(^|/)\._|(^|/)\.DS_Store$' ; then
-            echo "❌ Apple metadata files are tracked in git. Please remove them from the repository."
-            exit 1
-          fi
-          echo "✅ No tracked Apple metadata files found"
+        run: node tools/apple-cleaner.js --mode=check
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
@@ -37,7 +31,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v5
         with:
-          node-version: '22.20.0'
+          node-version: 22.20.0
           cache: pnpm
 
       - name: Install dependencies
