--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@builder.io/qwik": "^1.16.0",
     "@mimic/design-tokens": "workspace:*",
+    "@mimic/tokens-core": "workspace:*",
     "@vanilla-extract/css": "^1.17.4",
     "@vanilla-extract/vite-plugin": "^5.1.1"
   },
