--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -5,6 +5,12 @@
   "description": "Shared utilities across all Mimic packages",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "import": "./src/index.ts"
+    }
+  },
   "files": [
     "dist"
   ],
