--- a/packages/tokens-core/package.json
+++ b/packages/tokens-core/package.json
@@ -9,5 +9,9 @@
       "types": "./src/index.ts",
       "import": "./src/index.ts"
     }
+  },
+  "dependencies": {
+    "@mimic/design-tokens": "workspace:*",
+    "@mimic/shared-utils": "workspace:*"
   }
 }
