--- a/toolchains/tsconfig.base.json
+++ b/toolchains/tsconfig.base.json
@@ -20,6 +20,7 @@
     "paths": {
       "@mimic/design-system": ["./packages/design-system/src"],
       "@mimic/design-tokens": ["./packages/design-tokens/src"],
+      "@mimic/design-tokens/sdk": ["./packages/design-tokens/src"],
       "@mimic/shared-utils": ["./packages/shared-utils/src"],
       "@mimic/tokens-core": ["./packages/tokens-core/src"],
       "@mimic/ui-kernel": ["./packages/ui-kernel/src"],
