--- a/infra/containers/devcontainer/docker-compose.yml
+++ b/infra/containers/devcontainer/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   workspace:
     build:
@@ -100,7 +98,7 @@ services:
 
   # Penpot token export automation
   penpot-export:
-    image: ghcr.io/penpot/penpot-export:2.8.1
+    image: penpotapp/exporter:2.10.0
     container_name: mimic-penpot-export
     volumes:
       - ../../../packages/design-tokens/tokens:/out
