--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,8 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "defaultBase": "main",
+  "neverConnectToCloud": true,
+  "nxCloudId": "6858740ab45da5624a6cdcf8",
   "namedInputs": {
     "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "production": [
@@ -16,10 +18,7 @@
       "!{projectRoot}/.storybook/**/*",
       "!{projectRoot}/tsconfig.storybook.json"
     ],
-    "sharedGlobals": [
-      "{workspaceRoot}/.github/workflows/ci.yml",
-      "{workspaceRoot}/tools/apple-cleaner.js"
-    ]
+    "sharedGlobals": ["{workspaceRoot}/.github/workflows/ci.yml", "{workspaceRoot}/tools/apple-cleaner.js"]
   },
   "targetDefaults": {
     "@nx/eslint:lint": {
@@ -80,21 +79,11 @@
     },
     "@nx/storybook:storybook": {
       "cache": true,
-      "inputs": [
-        "default",
-        "^production",
-        "{projectRoot}/.storybook/**/*",
-        "{projectRoot}/tsconfig.storybook.json"
-      ]
+      "inputs": ["default", "^production", "{projectRoot}/.storybook/**/*", "{projectRoot}/tsconfig.storybook.json"]
     },
     "@nx/storybook:build-storybook": {
       "cache": true,
-      "inputs": [
-        "default",
-        "^production",
-        "{projectRoot}/.storybook/**/*",
-        "{projectRoot}/tsconfig.storybook.json"
-      ],
+      "inputs": ["default", "^production", "{projectRoot}/.storybook/**/*", "{projectRoot}/tsconfig.storybook.json"],
       "outputs": ["{options.outputDir}"]
     },
     "visual-test": {
@@ -150,7 +139,6 @@
     }
   ],
   "useInferencePlugins": true,
-  "nxCloudId": "6858740ab45da5624a6cdcf8",
   "parallel": 3,
   "cacheDirectory": "tmp/nx-cache"
 }
