--- a/project.json
+++ b/project.json
@@ -9,7 +9,7 @@
       },
       "configurations": {
         "check": {
-          "command": "biome format --check ."
+          "command": "biome check --formatter-enabled=true --linter-enabled=false --assist-enabled=false --error-on-warnings ."
         },
         "affected": {
           "command": "biome format --write --files {files}"
